# excel-auto-filler

./: .gitignore  LICENSE  README.md  excelfiller_cli.spec  excelfiller_gui.spec  pyproject.toml  todos.md
src/excelfiller/: common.py  function.py  processor.py  rule.py
src/excelfiller/functions/: fakerfn.py  randomfn.py
src/excelfiller_executable/: cli_main.py  common.py  demo.toml  demo.xlsx  gui_main.py
src/excelfiller_executable/cli/: __init__.py  cli.py  cmd_config.py  cmd_convert.py  cmd_run.py
src/excelfiller_executable/data/: demo.toml  human.json  human.yaml
src/excelfiller_executable/gui/: cmd_newconfig.py  gui.py
src/excelfiller_executable/gui/generated_code/: convert_dialog.py  main_window.py  new_rules_dialog.py
src/excelfiller_executable/gui/res/: autouic.py  convert_dialog.ui  main_window.ui  new_rules_dialog.ui
src/excelfiller_executable/gui/ui/: common.py  convert_dialog.py  new_rules_dialog.py
src/excelfiller_executable/gui/ui/mainwindow/: about_dialog.py  controller.py  handler.py  terminal_styles.py  window.py
